--- a/counter-app/src/index.css
+++ b/counter-app/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  background-color: #85DCB0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +11,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.name-to-be-altered {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #41B3A3;
+  padding-bottom: 5%;
+  padding-top: 5%;
+}
+
+.form-submission {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20%;
 }
