--- a/smart-investment/src/index.css
+++ b/smart-investment/src/index.css
@@ -33,6 +33,9 @@ CardText {
 .mt-2 {
   font-family: 'Playfair Display', serif;
 }
+h2 {
+  font-family: 'Playfair Display', serif;
+}
 Pie {
   font-family: 'Monda', sans-serif;
 }
