--- a/smart-investment/src/index.css
+++ b/smart-investment/src/index.css
@@ -14,6 +14,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+#graph {
+  background-color: rgba(251,238,228,0.3)
+}
 .display-3 {
   font-family: 'Playfair Display', serif;
 }
